# hep_rag

./: .gitignore  README.md  config.example.yaml  pyproject.toml
collections/: cms_rare_decay.json
db/: schema.sql
docs/: build_hep_rag_v2_deep_dive_ppt.py  corpus-bootstrap-status-2026-03-22.md  current-implementation-review.md  hep-core-object-contracts.md  hep-rag-v2-deep-dive-cn.pptx  hep-rag-v2-overview-diagram.md  hep-rag-v2-overview-diagram.mmd  hep-rag-v2-overview-slides.html  hep-rag-v2-overview-slides.md  hep-rag-v2-plan.md  pdg-work-implementation.md  smoke_queries.yaml  testing.md
docs/runbooks/: master-plan-status.md  rag-effect-benchmark.md  scale-benchmark.md  user-testing.md
scripts/: run_rag_effect_benchmark.py  run_scale_benchmark.py
src/hep_rag_v2/: benchmark_suite.py  cli.py  community.py  config.py  db.py  download.py  evidence.py  fulltext.py  graph.py  loadtest.py  maintenance.py  metadata.py  methods.py  object_contracts.py  (+20 more)
tests/: conftest.py  test_agent_shell.py  test_benchmark_suite.py  test_bootstrap.py  test_community.py  test_config_runtime.py  test_evidence.py  test_incremental_reparse.py  test_inspire_provider.py  test_langchain_adapter.py  test_loadtest.py  test_mineru_api.py  test_object_contracts.py  test_online_search.py  test_ontology.py  test_openai_compatible.py  test_pdg_import_pipeline.py  test_pdg_structure.py  test_physics.py  test_rag_answer_strategy.py  test_retrieval_adapter.py  test_retrieval_shell.py  test_service_api.py  test_smoke_metadata.py  test_thinking_extraction.py  test_vector.py  test_work_family.py
(+36 files in other folders)
